--- a/language/es/es-pommo.po
+++ b/language/es/es-pommo.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: poMMo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-03-23 17:24-0400\n"
-"PO-Revision-Date: 2010-10-20 21:37+0100\n"
-"Last-Translator: Joan F. Guerrero Estrada <jfguerreroestrada@gmail.com>\n"
+"PO-Revision-Date: 2014-02-20 16:11+0100\n"
+"Last-Translator: Juan Fernando Villa Hernández <elite.linux@gmail.com>\n"
 "Language-Team: FCDigital <francisco@fcdigital.com.mx>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Country: MEXICO\n"
+"X-Poedit-Country: COLOMBIA\n"
 
 #
 # File: pommo_theme_lang.php, line: 3
